Fix logo margin

--- a/site/themes/jdi5/css/region--branding--alpha-default.css.less
+++ b/site/themes/jdi5/css/region--branding--alpha-default.css.less
@@ -4,6 +4,10 @@
   margin: 0;
 }
 
+.region-branding .logo-img {
+  margin: @base-margin @base-margin / 2;
+}
+
 .logo-img {
   height: @logo-display-alpha-default-height;
   width: @logo-display-alpha-default-width;
