Replace properties.css.less with Property
Note that, for some unknown reason, I had to move property import to bottom.

--- a/site/themes/jdi5/css/elements.css.less
+++ b/site/themes/jdi5/css/elements.css.less
@@ -1,5 +1,5 @@
-@import "properties.css.less";
 @import "variables.css.less";
+@import "property/property.css.less";
 
 .base-font() {
   font-family: Helvetica, Arial, "Nimbus Sans L", sans-serif;
