--- a/site/themes/jdi5/css/sitewide.block.css.less
+++ b/site/themes/jdi5/css/sitewide.block.css.less
@@ -1,5 +1,5 @@
-@import "properties.css.less";
 @import "variables.css.less";
+@import "property/property.css.less";
 
 .region-sidebar-first .block .block-title,
 .region-sidebar-second .block .block-title {
