--- a/site/themes/jdi5/css/sitewide.region--branding.css.less
+++ b/site/themes/jdi5/css/sitewide.region--branding.css.less
@@ -1,5 +1,5 @@
-@import "properties.css.less";
 @import "variables.css.less";
+@import "property/property.css.less";
 
 .region-branding {
   height: auto !important;
