--- a/site/themes/jdi5/css/sitewide.block--locale.css.less
+++ b/site/themes/jdi5/css/sitewide.block--locale.css.less
@@ -1,6 +1,6 @@
 @import "elements.css.less";
-@import "properties.css.less";
 @import "variables.css.less";
+@import "property/property.css.less";
 
 .block-locale-language .block-title {
   .element-invisible();
