--- a/site/themes/jdi5/css/sitewide.page.css.less
+++ b/site/themes/jdi5/css/sitewide.page.css.less
@@ -1,5 +1,5 @@
-@import "properties.css.less";
 @import "variables.css.less";
+@import "property/property.css.less";
 
 body {
   background: #ebebeb url('../images/page-bg.png');
