Move sitewide assets to its own directory

--- a/http/sites/default/themes/jdi5/css/sitewide/block--locale.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/block--locale.css.less
@@ -1,6 +1,6 @@
-@import "elements.css.less";
-@import "variables.css.less";
-@import "property/property.css.less";
+@import "../elements.css.less";
+@import "../variables.css.less";
+@import "../property/property.css.less";
 
 .block-locale-language {
   display: block;
@@ -25,7 +25,7 @@
 }
 
 .block-locale-language a::before {
-  background: url('../images/flags.png') top left no-repeat;
+  background: url('../../images/flags.png') top left no-repeat;
   content: '';
   display: block;
   float: left;
