--- a/http/sites/default/themes/jdi5/css/sitewide/block.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/block.css.less
@@ -1,5 +1,5 @@
-@import "variables.css.less";
-@import "property/property.css.less";
+@import "../variables.css.less";
+@import "../property/property.css.less";
 
 .region-sidebar-first .block .block-title,
 .region-sidebar-second .block .block-title {
@@ -11,23 +11,23 @@
 }
 
 .block a.feed-subscribe {
-  background: #fb9d3a url('../images/feed-icon.png') left center no-repeat;
+  background: #fb9d3a url('../../images/feed-icon.png') left center no-repeat;
   background:
-    url('../images/feed-icon.png') left center no-repeat,
+    url('../../images/feed-icon.png') left center no-repeat,
     -moz-linear-gradient(
       top center,
       #fb9d3a 0%,
       #db5e2a  100%
     );
   background:
-    url('../images/feed-icon.png') left center no-repeat,
+    url('../../images/feed-icon.png') left center no-repeat,
     -o-linear-gradient(
       top,
       #fb9d3a,
       #db5e2a
     );
   background:
-    url('../images/feed-icon.png') left center no-repeat,
+    url('../../images/feed-icon.png') left center no-repeat,
     -webkit-gradient(
       linear, left top, left bottom,
       color-stop(0, #fb9d3a),
@@ -60,6 +60,6 @@
 }
 
 .block a.feed-subscribe:hover {
-  background: #fb9d3a url('../images/feed-icon.png') left center no-repeat;
+  background: #fb9d3a url('../../images/feed-icon.png') left center no-repeat;
   text-decoration: none;
 }
