--- a/http/sites/default/themes/jdi5/css/sitewide/html.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/html.css.less
@@ -1,5 +1,5 @@
-@import "variables.css.less";
-@import "elements.css.less";
+@import "../variables.css.less";
+@import "../elements.css.less";
 
 a:link,
 a:visited {
@@ -69,4 +69,4 @@ input[type="button"] {
   .button();
 }
 
-@import "classes.css.less";
+@import "../classes.css.less";
