--- a/http/sites/default/themes/jdi5/css/sitewide/region--branding.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/region--branding.css.less
@@ -1,5 +1,5 @@
-@import "variables.css.less";
-@import "property/property.css.less";
+@import "../variables.css.less";
+@import "../property/property.css.less";
 
 .region-branding {
   height: auto !important;
@@ -34,7 +34,7 @@
 
 .backgroundsize
 .logo-img a {
-  background: url('../images/logo-sprite.png') top left no-repeat;
+  background: url('../../images/logo-sprite.png') top left no-repeat;
   background-size: 100%;
   display: block;
   padding: 0;
