--- a/http/sites/default/themes/jdi5/css/sitewide/section--content.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/section--content.css.less
@@ -1,5 +1,5 @@
-@import "elements.css.less";
-@import "variables.css.less";
+@import "../elements.css.less";
+@import "../variables.css.less";
 
 .section-content {
   .base-font();
