--- a/http/sites/default/themes/jdi5/css/sitewide/section--header.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/section--header.css.less
@@ -1,5 +1,5 @@
 .section-header {
-  background: #333 url('../images/header-bg.png') bottom left repeat-x;
+  background: #333 url('../../images/header-bg.png') bottom left repeat-x;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
   color: #fff;
 }
