--- a/http/sites/default/themes/jdi5/css/sitewide/page.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/page.css.less
@@ -1,8 +1,8 @@
-@import "variables.css.less";
-@import "property/property.css.less";
+@import "../variables.css.less";
+@import "../property/property.css.less";
 
 body {
-  background: #ebebeb url('../images/page-bg.png');
+  background: #ebebeb url('../../images/page-bg.png');
 }
 
 #admin-menu li.admin-menu-icon {
