Move page contact styles to alpha-default grid

--- a/http/sites/default/themes/jdi5/css/alpha-default/page--contact.css.less
+++ b/http/sites/default/themes/jdi5/css/alpha-default/page--contact.css.less
@@ -1,4 +1,4 @@
-@import "variables.css.less";
+@import "../variables.css.less";
 
 .page-contact .contact-form .form-item {
   margin: 0 0 @base-margin;
