Improve block locale styles in mobile

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/block--locale.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/block--locale.css.less
@@ -1,6 +1,7 @@
 @import "../../variables.css.less";
 
 .block-locale-language {
+  background: transparent;
   float: right;
 }
 
@@ -9,5 +10,10 @@
 }
 
 .block-locale-language a {
+  background-color: #555;
   border-radius: 0 0 0 @base-radius;
+}
+
+.block-locale-language a:hover {
+  background-color: #5a5a5a;
 }
