Improve header shadow for mobile

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/section--header.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/section--header.css.less
@@ -3,3 +3,8 @@
   width: 100%;
   z-index: 100;
 }
+
+.section-header::after {
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.25)), color-stop(1, rgba(0, 0, 0, 0)));
+  background: -moz-linear-gradient(top center, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0) 100%);
+}
