--- a/http/sites/default/themes/jdi5/css/sitewide/region--content.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/region--content.css.less
@@ -1,15 +1,11 @@
 @import "../variables.css.less";
 
 .region-content {
+  padding: @base-margin 0;
   margin-left: 0;
   margin-right: 0;
 }
 
 .region-content > .region-inner {
-  background-color: #fff;
-  background-color: rgba(255, 255, 255, 0.7);
-  border: 1px solid #e8e8e8;
-  border-width: 1px 0;
-  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.1);
-  padding: @base-margin * 2;
+  padding: @base-margin;
 }
