Change menu style

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/normal/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/normal/region--menu.css.less
@@ -2,10 +2,10 @@
 
 .main-menu {
   font-size: 100%;
-  font-weight: bold;
 }
 
 .main-menu a:link,
 .main-menu a:visited {
-  padding: 0 @base-margin;
+  padding-left: @base-margin;
+  padding-right: @base-margin;
 }
