--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--menu.css.less
@@ -12,7 +12,7 @@
 }
 
 .main-menu {
-  float: right;
+  float: left;
   margin: 0;
 }
 
@@ -26,6 +26,6 @@
 .main-menu a:visited {
   display: table-cell;
   height: 100%;
-  padding: 0 @base-margin / 2;
+  padding: 2px (@base-margin / 2) 0;
   vertical-align: middle;
 }
