--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/wide/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/wide/region--menu.css.less
@@ -2,5 +2,6 @@
 
 .main-menu a:link,
 .main-menu a:visited {
-  padding: 0 @base-margin * 2;
+  padding-left: @base-margin;
+  padding-right: @base-margin;
 }
