--- a/http/sites/default/themes/jdi5/css/sitewide/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/region--menu.css.less
@@ -20,8 +20,8 @@
   padding: @base-margin 0;
   text-decoration: none;
   text-shadow: 0 0 10px #444;
-  transition-duration: 0.4s;
-  transition-property: background-image, color, text-shadow;
+  transition-duration: 0.25s;
+  transition-property: background, color, text-shadow;
   z-index: 10;
 }
 
@@ -32,7 +32,7 @@
 .main-menu li:focus a,
 .main-menu li:active a,
 .main-menu li.active a {
+  background-color: rgba(255, 255, 255, 0.1);
   color: #fff;
   outline: 0;
-  text-shadow: 0 0 25px #fff;
 }
