Replace equal heights for region menu with hard coded height

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/normal/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/normal/region--menu.css.less
@@ -1,5 +1,9 @@
 @import "../../../variables.css.less";
 
+.region-menu {
+  height: (@logo-display-alpha-default-normal-height + (2 * @base-margin));
+}
+
 .main-menu {
   font-size: 100%;
 }
