--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--menu.css.less
@@ -1,5 +1,9 @@
 @import "../../variables.css.less";
 
+.region-menu {
+  height: (@logo-display-alpha-default-height + (2 * @base-margin));
+}
+
 .region-menu .region-menu-inner,
 .region-menu .navigation,
 .region-menu .main-menu {
