--- a/http/sites/default/themes/jdi5/css/variables.css.less
+++ b/http/sites/default/themes/jdi5/css/variables.css.less
@@ -15,3 +15,6 @@
 
 @logo-display-alpha-default-width: 160px;
 @logo-display-alpha-default-height: (@logo-display-alpha-default-width / @logo-width) * @logo-height;
+
+@logo-display-alpha-default-normal-width: 140px;
+@logo-display-alpha-default-normal-height: (@logo-display-alpha-default-normal-width / @logo-width) * @logo-height;
