Fix hard coded menu height

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/wide/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/wide/region--menu.css.less
@@ -1,5 +1,9 @@
 @import "../../../variables.css.less";
 
+.region-menu {
+  height: (@logo-display-alpha-default-height + (2 * @base-margin));
+}
+
 .main-menu a:link,
 .main-menu a:visited {
   padding-left: @base-margin;
