--- a/http/sites/default/themes/jdi5/css/variables.css.less
+++ b/http/sites/default/themes/jdi5/css/variables.css.less
@@ -18,3 +18,6 @@
 
 @logo-display-alpha-default-normal-width: 140px;
 @logo-display-alpha-default-normal-height: (@logo-display-alpha-default-normal-width / @logo-width) * @logo-height;
+
+@logo-display-alpha-default-narrow-width: 100px;
+@logo-display-alpha-default-narrow-height: (@logo-display-alpha-default-narrow-width / @logo-width) * @logo-height;
