Change logo hover state

--- a/http/sites/default/themes/jdi5/css/sitewide/region--branding.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/region--branding.css.less
@@ -34,14 +34,15 @@
 
 .backgroundsize
 .logo-img a {
-  background: url('../../images/logo-sprite.png') top left no-repeat;
+  background: url('../../images/header-logo.png') top left no-repeat;
   background-size: 100%;
   display: block;
+  opacity: 0.85;
   padding: 0;
 
   &:hover,
   &:active {
-    background-position: bottom left;
+    opacity: 1;
   }
 }
 
