Increase menu item padding on narrow viewport

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--menu.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--menu.css.less
@@ -26,6 +26,6 @@
 .main-menu a:visited {
   display: table-cell;
   height: 100%;
-  padding: 2px (@base-margin / 2) 0;
+  padding: 2px @base-margin 0;
   vertical-align: middle;
 }
