--- a/http/sites/default/themes/jdi5/css/sitewide/region--branding.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/region--branding.css.less
@@ -39,6 +39,8 @@
   display: block;
   opacity: 0.85;
   padding: 0;
+  transition-duration: 0.25s;
+  transition-property: opacity;
 
   &:hover,
   &:active {
