Resizing logo image for media queries

--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--branding.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/region--branding.css.less
@@ -4,7 +4,9 @@
   margin: 0;
 }
 
+.backgroundsize
 .logo-img a {
+  background-image: url('../../../images/header-logo-alpha-default.png');
   margin: 0;
   max-width: @logo-display-alpha-default-width;
 }
