--- a/http/sites/default/themes/jdi5/css/sitewide/alpha-default/wide/section--content.css.less
+++ b/http/sites/default/themes/jdi5/css/sitewide/alpha-default/wide/section--content.css.less
@@ -1,4 +1,4 @@
-@import "../../variables.css.less";
+@import "../../../variables.css.less";
 
 .section-content {
   padding-top: (@logo-display-alpha-default-height + (2 * @base-margin));
